Mask keyframes hidden behind image viewer header #70905

Closed
opened 2019-10-17 19:24:15 +02:00 by Carlie · 5 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
The blue timeline that displays the keyframes when animating a mask in the image viewer > mask mode is hidden when the header sits at the bottom of the window. It is only visible when A: the mask shape is 'G' selected or B: the 'flip to top' header option is selected.

Exact steps for others to reproduce the error

  • Open image viewer in blender
  • Switch mode to mask mode
  • Create a shape for animating
  • If the image view header is set to sit on the bottom of the window, the blue timeline is only visible when the shape is 'G' selected.
  • To see the timeline and keys at all times, the header must be moved to the top of the window.

[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 399.24 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** The blue timeline that displays the keyframes when animating a mask in the image viewer > mask mode is hidden when the header sits at the bottom of the window. It is only visible when A: the mask shape is 'G' selected or B: the 'flip to top' header option is selected. **Exact steps for others to reproduce the error** - Open image viewer in blender - Switch mode to mask mode - Create a shape for animating - If the image view header is set to sit on the bottom of the window, the blue timeline is only visible when the shape is 'G' selected. - To see the timeline and keys at all times, the header must be moved to the top of the window. [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @carliel

Added subscriber: @carliel

Added subscriber: @ConradDueck

Added subscriber: @ConradDueck
Philipp Oeser self-assigned this 2019-10-17 20:22:06 +02:00
Member

Will raise this to medium prio since opening 2.79 files will most likely run into this [they had headers at the bottom by default...]

Will raise this to medium prio since opening 2.79 files will most likely run into this [they had headers at the bottom by default...]

This issue was referenced by 87ac3d14b2

This issue was referenced by 87ac3d14b29d61d74b9aee2296f5b9892e2aa4a0
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70905
No description provided.